After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752228 - payloader/depayload: Wrong segment handling
payloader/depayload: Wrong segment handling
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal minor
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-10 15:55 UTC by Nicolas Dufresne (ndufresne)
Modified: 2015-08-16 13:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
depayloader: Use input segment start (1.46 KB, patch)
2015-07-10 16:51 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2015-07-10 15:55:59 UTC
The issue is that TS information seems to be maintained, but segment information is lost. This lead to freeze now that x264enc applies a large forward offset. This is not really a use case, but it would be nice to fix so we can use this pattern in tests.

gst-launch-1.0 videotestsrc ! x264enc tune=zerolatency ! rtph264pay ! rtph264depay ! avdec_h264 ! x264enc tune=zerolatency ! avdec_h264 ! xvimagesink
Comment 1 Nicolas Dufresne (ndufresne) 2015-07-10 16:51:02 UTC
Created attachment 307238 [details] [review]
depayloader: Use input segment start

When there is no clock_base provided, the start position is
set to 0 instead of the original segment start value. This
would break synchronization if start was not 0.
Comment 2 Nicolas Dufresne (ndufresne) 2015-07-20 20:27:45 UTC
Attachment 307238 [details] pushed as 7c638e0 - depayloader: Use input segment start